@@ -7,7 +7,7 @@
     <parent>
         <groupId>svkreml.ottercv</groupId>
         <artifactId>ottercv</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
 
     <artifactId>ottercv-client</artifactId>
@@ -180,21 +180,6 @@
 
     <profiles>
         <profile>
-            <id>windows</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <properties>
-                <javapackager.name>${app.fullName}</javapackager.name>
-                <javapackager.createTarball>false</javapackager.createTarball>
-                <copy-rename.goal>rename</copy-rename.goal>
-                <copy-rename.sourceFile>${project.basedir}/target/${javapackager.name}_${project.version}.exe</copy-rename.sourceFile>
-                <copy-rename.destinationFile>${project.basedir}/target/${app.finalName}-${project.version}.exe</copy-rename.destinationFile>
-            </properties>
-        </profile>
-        <profile>
             <id>unix</id>
             <activation>
                 <os>
@@ -210,19 +195,136 @@
             </properties>
         </profile>
         <profile>
-            <id>macos</id>
-            <activation>
-                <os>
-                    <family>mac</family>
-                </os>
-            </activation>
-            <properties>
-                <javapackager.name>${app.shortName}</javapackager.name>
-                <javapackager.createTarball>false</javapackager.createTarball>
-                <copy-rename.goal>rename</copy-rename.goal>
-                <copy-rename.sourceFile>${project.basedir}/target/${javapackager.name}_${project.version}.dmg</copy-rename.sourceFile>
-                <copy-rename.destinationFile>${project.basedir}/target/${app.finalName}-${project.version}.dmg</copy-rename.destinationFile>
-            </properties>
+            <id>linux-appimage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>${maven-dependency-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>copy-dependencies-for-appimage</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/libs</outputDirectory>
+                                    <includeScope>runtime</includeScope>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>download-appimagetool</id>
+                                <phase>generate-resources</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>sh</executable>
+                                    <arguments>
+                                        <argument>-c</argument>
+                                        <argument><![CDATA[mkdir -p "${project.build.directory}" && ARCH=$(uname -m); if [ "$ARCH" = "x86_64" ]; then URL="https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"; elif [ "$ARCH" = "aarch64" ]; then URL="https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-aarch64.AppImage"; else echo "Unsupported architecture: $ARCH"; exit 1; fi; curl -L -o "${project.build.directory}/appimagetool-${ARCH}.AppImage" "$URL" && chmod +x "${project.build.directory}/appimagetool-${ARCH}.AppImage" && cd "${project.build.directory}" && rm -rf squashfs-root && "./appimagetool-${ARCH}.AppImage" --appimage-extract]]></argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>make-appimage-script-executable</id>
+                                <phase>generate-resources</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>chmod</executable>
+                                    <arguments>
+                                        <argument>+x</argument>
+                                        <argument>${project.basedir}/../ottercv-distrib/appimage/build-appimage.sh</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>build-jre</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>sh</executable>
+                                    <arguments>
+                                        <argument>-c</argument>
+                                        <argument><![CDATA[${env.JAVA_HOME}/bin/jlink --module-path ${env.JAVA_HOME}/jmods --add-modules java.base,java.desktop,java.logging,java.xml,java.sql,java.naming,java.compiler,jdk.unsupported --output ${project.build.directory}/jre --no-header-files --no-man-pages --strip-debug --compress=2]]></argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>build-appdir</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>${project.basedir}/../ottercv-distrib/appimage/build-appimage.sh</executable>
+                                    <arguments>
+                                        <argument>${project.build.directory}</argument>
+                                        <argument>${project.build.directory}/OtterCV.AppDir</argument>
+                                        <argument>${project.basedir}/assets</argument>
+                                        <argument>${project.build.directory}/jre</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>create-appimage</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>sh</executable>
+                                    <arguments>
+                                        <argument>-c</argument>
+                                        <argument><![CDATA["${project.build.directory}/squashfs-root/AppRun" "${project.build.directory}/OtterCV.AppDir" "${project.build.directory}/ottercv-${project.version}-$(uname -m).AppImage"]]></argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>cleanup-appimagetool</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>rm</executable>
+                                    <arguments>
+                                        <argument>-rf</argument>
+                                        <argument>${project.build.directory}/squashfs-root</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        <execution>
+                                <id>test-appimage</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>sh</executable>
+                                    <arguments>
+                                        <argument>-c</argument>
+                                        <argument><![CDATA[if [ "${AI_TEST}" = "true" ]; then chmod +x "${project.build.directory}/ottercv-${project.version}-$(uname -m).AppImage" && cd "${project.build.directory}" && "./ottercv-${project.version}-$(uname -m).AppImage" --appimage-extract && timeout 10 xvfb-run "./squashfs-root/AppRun" || true; rm -rf squashfs-root; fi]]></argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
@@ -248,45 +350,16 @@
                                     <bundleJre>true</bundleJre>
                                     <createTarball>${javapackager.createTarball}</createTarball>
                                     <displayName>${app.fullName}</displayName>
-                                    <extra>
-                                        <innosetup.appCopyright>Copyright (c) ${app.copyrightYears} ${project.organization.name}</innosetup.appCopyright>
-                                        <innosetup.uninstallDisplayName>${app.fullName}</innosetup.uninstallDisplayName>
-                                        <innosetup.wizardImageFile>${project.basedir}/assets/windows/${app.finalName}-wizard-image.bmp</innosetup.wizardImageFile>
-                                        <innosetup.wizardSmallImageFile>${project.basedir}/assets/windows/${app.finalName}-setup-icon.bmp</innosetup.wizardSmallImageFile>
-                                    </extra>
                                     <licenseFile>${project.basedir}/target/license.txt</licenseFile>
                                     <mainClass>${app.mainClass}</mainClass>
                                     <name>${javapackager.name}</name>
                                     <organizationName>${project.organization.name}</organizationName>
                                     <organizationUrl>${project.organization.url}</organizationUrl>
                                     <version>${project.version}</version>
-                                    <winConfig>
-                                        <!-- general properties -->
-                                        <icoFile>${project.basedir}/assets/windows/${app.finalName}.ico</icoFile>
-
-                                        <!-- exe creation properties -->
-                                        <shortcutName>${app.fullName}</shortcutName>
-
-                                        <!-- setup generation properties -->
-                                        <setupLanguages>
-                                            <english>compiler:Default.isl</english>
-                                        </setupLanguages>
-                                        <disableDirPage>false</disableDirPage>
-                                        <disableProgramGroupPage>false</disableProgramGroupPage>
-                                        <disableFinishedPage>false</disableFinishedPage>
-                                        <disableRunAfterInstall>false</disableRunAfterInstall>
-                                        <disableWelcomePage>false</disableWelcomePage>
-                                    </winConfig>
                                     <linuxConfig>
                                         <pngFile>${project.basedir}/assets/linux/${app.finalName}.png</pngFile>
+                                        <generateAppImage>false</generateAppImage>
                                     </linuxConfig>
-                                    <macConfig>
-                                        <!-- general properties -->
-                                        <icnsFile>${project.basedir}/assets/mac/${app.finalName}.icns</icnsFile>
-
-                                        <!-- properties used for DMG disk image generation -->
-                                        <volumeIcon>${project.basedir}/assets/mac/${app.finalName}-volume.icns</volumeIcon>
-                                    </macConfig>
                                 </configuration>
                             </execution>
                         </executions>
